# pavex

./: .gitignore  .release-plz.toml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  DEVLOG.md  README.md  ci.sh  deny.toml  dist-workspace.toml  dprint.json  latest  mkdocs.yml  pyproject.toml  typos.toml  versions.json
compiler/pavex_cli/: Cargo.toml  build.rs  jwks.json
compiler/pavex_cli/src/: cargo_install.rs  lib.rs  package_graph.rs  prebuilt.rs  toolchain.rs  user_input.rs
compiler/pavex_cli/tests/: ui_tests.rs
compiler/pavex_cli_diagnostic/: Cargo.toml
compiler/pavex_cli_diagnostic/src/: lib.rs  utils.rs
compiler/pavex_cli_shell/: Cargo.toml
compiler/pavex_cli_shell/src/: lib.rs
compiler/pavex_rustdoc_ext/: Cargo.toml
compiler/pavex_rustdoc_ext/src/: lib.rs
compiler/pavex_rustdoc_types/: Cargo.toml
compiler/pavex_rustdoc_types/src/: lib.rs
compiler/pavexc_annotations/: Cargo.toml
compiler/pavexc_annotations/src/: errors.rs  lib.rs  parser.rs  process.rs  types.rs
compiler/pavexc_cli/: Cargo.toml
compiler/pavexc_cli/src/: formatter.rs  main.rs  telemetry.rs
compiler/pavexc_cli/template/: .dockerignore  .gitignore  Cargo.toml.liquid  README.md  deny.toml
compiler/pavexc_rustdoc_cache/: Cargo.toml
compiler/pavexc_rustdoc_cache/src/: lib.rs  toolchain.rs
docs/examples/: Cargo.toml
docs/examples/.cargo/: config.toml
docs/examples/.config/: hakari.toml
docs/examples/attributes/: Cargo.toml  annotated_example.snap  custom_id.snap  id_registration.snap  method_annotation.snap  struct.snap  trait_method.snap  use.snap
docs/examples/configuration/: Cargo.toml  build_state.snap  derives.snap  example.yml  import.snap  postgres_config.snap  profile.snap  register_one.snap  server_config.snap
docs/examples/cookies/: Cargo.toml  delete.snap  get_all.snap  get_one.snap  insert.snap  installation.snap
docs/examples/workspace_hack/: Cargo.toml
examples/app_blueprint/: Cargo.toml  blueprint.json  blueprint.ron
examples/app_blueprint/src/: app.rs  bin.rs  lib.rs
examples/generated_app/: Cargo.toml
examples/generated_app/src/: lib.rs
examples/realworld/: .env  .gitignore  Cargo.toml  README.md
examples/realworld/.config/: hakari.toml
examples/realworld/.github/: pre_steps.yml  services.yml
examples/realworld/.sqlx/: query-852e97f27387a23047136592632c6d5349e409a36fa627e646db764d60435b3a.json  query-a7a48164f18a13e157dca8ae6baeb01f0af8240d36a2da624af6537967634770.json  query-c4757196c55a7ad972698d29ee806294b89a4738d557117628db23b6a30ecdf7.json  query-fda06e937f18009780c307ee5bc7c3ba80d9311274592754f0979d9462a28102.json
examples/realworld/api_bp/: Cargo.toml
examples/realworld/api_server/: Cargo.toml
examples/realworld/api_server_sdk/: Cargo.toml  blueprint.ron
examples/realworld/app/: Cargo.toml
examples/realworld/app_blueprint/: Cargo.toml
examples/realworld/app_server_sdk/: Cargo.toml  blueprint.ron
examples/realworld/conduit_core/: Cargo.toml
examples/realworld/configuration/: dev.yml  prod.yml
examples/realworld/scripts/: init_db.sh
examples/realworld/server/: .gitignore  Cargo.toml
examples/realworld/server_sdk/: .gitignore  Cargo.toml  rustfmt.toml
examples/realworld/workspace_hack/: Cargo.toml
libs/: .release-plz.toml  CHANGELOG.md  Cargo.toml  annotated.json  deny.toml  formatted.json  typos.toml
libs/.cargo/: config.toml
libs/.config/: hakari.toml
libs/generate_from_path/: Cargo.toml
libs/generate_from_path/src/: filenames.rs  ignore_me.rs  lib.rs  scoped_working_directory.rs  template.rs
libs/pavex/: Cargo.toml  README.md  build.rs
libs/pavex/src/: connection.rs  cookie.rs  error.rs  graphmap.rs  http.rs  insert_only_map.rs  lib.rs  middleware.rs  request.rs  router.rs  rustdoc.rs  serialization.rs  unit.rs  utils.rs
libs/pavex/tests/: server.rs
libs/pavex_bp_schema/: Cargo.toml
libs/pavex_bp_schema/src/: lib.rs
libs/pavex_builder/: Cargo.toml
libs/pavex_builder/src/: app.rs  blueprint.rs  callable.rs  internals.rs  lib.rs  router.rs
libs/pavex_cli/: Cargo.toml  build.rs  jwks.json
libs/pavex_cli/src/: activation.rs  cargo_install.rs  cli_kind.rs  command.rs  confirmation.rs  dependencies.rs  env.rs  lib.rs  locator.rs  main.rs  package_graph.rs  prebuilt.rs  rustup.rs  state.rs  toolchain.rs  user_input.rs  utils.rs  version.rs
libs/pavex_cli/tests/: dependency_tree.rs  ui_tests.rs
libs/pavex_cli_client/: Cargo.toml
libs/pavex_cli_client/src/: client.rs  lib.rs
libs/pavex_cli_deps/: Cargo.toml
libs/pavex_cli_deps/src/: commands.rs  installers.rs  user_input.rs
libs/pavex_cli_diagnostic/: Cargo.toml
libs/pavex_cli_diagnostic/src/: lib.rs  utils.rs
libs/pavex_cli_flock/: Cargo.toml
libs/pavex_cli_flock/src/: lib.rs
libs/pavex_cli_shell/: Cargo.toml
libs/pavex_cli_shell/src/: lib.rs
libs/pavex_macros/: Cargo.toml
libs/pavex_macros/src/: config.rs  config_profile.rs  constructor.rs  error_handler.rs  error_observer.rs  fallback.rs  fn_like.rs  from.rs  lib.rs  methods.rs  path_params.rs  prebuilt.rs  utils.rs  wrap.rs
libs/pavex_macros/tests/: fail.rs  happy.rs  main.rs
libs/pavex_miette/: Cargo.toml
libs/pavex_miette/src/: diagnostic_chain.rs  lib.rs  (+2 more)
libs/pavex_postgres/: Cargo.toml
libs/pavex_reflection/: Cargo.toml
libs/pavex_runtime/: Cargo.toml
libs/pavex_server/: Cargo.toml
libs/pavex_session/: CONTRIBUTING.md  Cargo.toml
libs/pavex_session_memory_store/: Cargo.toml
libs/pavex_session_redis/: Cargo.toml  docker-compose.yml
libs/pavex_session_sqlx/: CONTRIBUTING.md  Cargo.toml
libs/pavex_test_runner/: Cargo.toml
libs/pavex_test_runner2/: Cargo.toml
libs/pavex_tracing/: Cargo.toml  README.md
libs/pavexc/: Cargo.toml  build.rs
libs/pavexc_attr_parser/: Cargo.toml
libs/pavexc_cli/: Cargo.toml  build.rs
libs/pavexc_cli_client/: Cargo.toml
libs/pavexc_rustdoc_types/: Cargo.toml  README.md
libs/persist_if_changed/: Cargo.toml
libs/px_workspace_hack/: Cargo.toml
libs/tracing_log_error/: CONTRIBUTING.md  Cargo.toml
libs/ui_tests/: Cargo.toml
libs/workspace_hack/: Cargo.toml
(+7795 files in other folders)
