[workspace]
members = [
    "runtime/pavex*",
    "runtime/sessions/*",
    "compiler/pavex*",
    "compiler/generate_from_path",
    "compiler/persist_if_changed",
    "px_workspace_hack",
]
resolver = "3"

[workspace.package]
edition = "2024"
repository = "https://github.com/LukeMathWalker/pavex"
homepage = "https://pavex.dev"
license = "Apache-2.0"
version = "0.2.10"

[workspace.dependencies]
generate_from_path = { path = "compiler/generate_from_path", version = "0.2.10" }
pavex = { path = "runtime/pavex", version = "0.2.10" }
pavex_bp_schema = { path = "compiler/pavex_bp_schema", version = "0.2.10" }
pavex_cli_deps = { path = "compiler/pavex_cli_deps", version = "0.2.10" }
pavex_cli_shell = { path = "compiler/pavex_cli_shell", version = "0.2.10" }
pavex_cli_flock = { path = "compiler/pavex_cli_flock", version = "0.2.10" }
pavex_cli_diagnostic = { path = "compiler/pavex_cli_diagnostic", version = "0.2.10" }
pavex_macros = { path = "runtime/pavex_macros", version = "0.2.10" }
pavex_miette = { path = "compiler/pavex_miette", version = "0.2.10" }
pavex_session = { path = "runtime/sessions/pavex_session", version = "0.2.10" }
pavex_session_sqlx = { path = "runtime/sessions/pavex_session_sqlx", version = "0.2.10" }
pavex_session_redis = { path = "runtime/sessions/pavex_session_redis", version = "0.2.10" }
pavex_session_memory_store = { path = "runtime/sessions/pavex_session_memory_store", version = "0.2.10" }
pavex_tracing = { path = "runtime/pavex_tracing", version = "0.2.10" }
pavex_test_runner = { path = "compiler/pavex_test_runner", version = "0.2.7" }
pavexc = { path = "compiler/pavexc", version = "0.2.10" }
pavexc_attr_parser = { path = "compiler/pavexc_attr_parser", version = "0.2.10" }
pavexc_cli_client = { path = "compiler/pavexc_cli_client", version = "0.2.10" }
persist_if_changed = { path = "compiler/persist_if_changed", version = "0.2.10" }

vergen-gitcl = { version = "1.0.8", features = ["build"] }
ahash = "0.8"
anstyle = "1.0.13"
anyhow = "1.0.100"
better-panic = "0.3.0"
bimap = "0.6.3"
bincode = "2"
biscotti = "0.4.3"
bytes = "1.11.0"
camino = "1"
cargo_metadata = "0.23.1"
cargo-like-utils = "0.2"
cargo-manifest = "0.19.1"
clap = "4"
clap-stdin = "0.8.0"
config = "0.15.19"
console = "0.16.2"
convert_case = "0.10"
darling = "0.23"
xxhash-rust = "0.8.15"
elsa = "1.11.2"
fixedbitset = "0.5"
figment = "0.10"
form_urlencoded = "1.2"
fs-err = "3"
futures-util = "0.3"
globwalk = "0.9.1"
guppy = "0.17.23"
heck = "0.5.0"
hex = "0.4.3"
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = "1"
hyper-util = "0.1"
include_dir = "0.7.4"
indexmap = "2"
indicatif = "0.18.3"
insta = "1.45.0"
itertools = "0.14"
jiff = "0.2.16"
jiff-sqlx = "0.1.1"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
la-arena = "0.3"
libc = "0.2.178"
libtest-mimic = "0.8.1"
liquid = "0.26.11"
liquid-core = "0.26.11"
matchit = "0.9.0"
miette = "7.6.0"
mime = "0.3"
num_cpus = "1.17.0"
object-pool = "0.6"
once_cell = "1.21.3"
paste = "1"
path-absolutize = "3.1.1"
pem = "3.0.6"
percent-encoding = "2"
petgraph = { version = "0.8", default-features = false }
pin-project-lite = "0.2"
prettyplease = "0.2"
proc-macro2 = "1.0.103"
quote = "1.0.42"
r2d2 = "0.8"
r2d2_sqlite = "0.25.0"
rayon = "1.11"
redact = "0.1.11"
redis = { version = "0.31.0", features = [
    "tokio-comp",
    "aio",
    "connection-manager",
] }
regex = "1.12.2"
relative-path = "2.0"
remove_dir_all = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
reqwest-middleware = "0.4"
reqwest-retry = "0.8.0"
reqwest-tracing = "0.5.8"
rustls = { version = "0.23", default-features = false }
rustls-platform-verifier = "0.6.2"
ring = "0.17.14"
rlimit = "0.10.2"
ron = "0.12"
rustc-hash = "2"
rusqlite = "0.32"
rustdoc-types = { version = "0.57.0", features = ["rustc-hash"] }
sanitize-filename = "0.6"
self-replace = "1.5.0"
secrecy = "0.10.3"
semver = "1.0.27"
serde = "1.0.228"
serde_html_form = "0.2"
serde_json = "1.0.145"
serde_path_to_error = "0.1"
serde_stacker = "0.1"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
similar = "2.7.0"
smallvec = "1"
sqlx = { version = "0.8", default-features = false }
socket2 = "0.6.1"
static_assertions = "1.1.0"
supports-color = "3.0.2"
supports-hyperlinks = "3.2.0"
supports-unicode = "3.0.0"
syn = "2.0"
tar = "0.4.44"
tempfile = "3.23.0"
terminal_size = "0.4"
textwrap = "0.16.2"
thiserror = "2"
tokio = "1.48.0"
toml = "0.9.10"
toml_edit = "0.24"
tracing = { version = "0.1.44", default-features = false }
tracing-log = "0.2"
tracing_log_error = "0.1"
tracing-chrome = "0.7"
tracing-subscriber = "0.3"
trybuild = "1.0"
type-safe-id = "0.3"
ubyte = "0.10.4"
unicode-width = "0.2"
ureq = "3.1.4"
uuid = "1"
walkdir = "2.5.0"
windows-sys = "0.61.2"
xdg-home = "1.3.0"
# The `static` feature ensures that we won't accidentally link to the system
# version of the library, thus requiring the user to have the library preinstalled
# on their system at runtime.
xz2 = { version = "0.1", features = ["static"] }
zip = { version = "2", default-features = false }
owo-colors = "4.2.3"
async-trait = "0.1"
humantime-serde = "1"

# Config for 'cargo release'
[workspace.metadata.release]
shared-version = true
consolidate-commits = true
tag-name = "{{version}}"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
