[project]
name = "pavex"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "mike>=2.1.3",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-material>=9.6.23",
    "mkdocs-redirects>=1",
    "pymdown-extensions>=10",
    "pygments-ansi-color>=0.3.0",
    "pip>=25",
    "md_slash"
]

[project.entry-points."markdown.extensions"]
trailing_slash = "md_slash:makeExtension"

[tool.uv.sources]
md_slash = { workspace = true }

[tool.uv.workspace]
members = ["docs/tools/md_slash"]
