[workspace]
members = [
    "./pavex*",
    "generate_from_path",
    "pavexc_attr_parser",
    "persist_if_changed",
    "px_workspace_hack",
]
resolver = "3"

[workspace.package]
edition = "2024"
repository = "https://github.com/LukeMathWalker/pavex"
homepage = "https://pavex.dev"
license = "Apache-2.0"
version = "0.2.2"

[workspace.dependencies]
vergen-gitcl = { version = "1.0.8", features = ["build"] }
ahash = "0.8"
anstyle = "1.0.11"
anyhow = "1.0.98"
better-panic = "0.3.0"
bimap = "0.6.3"
bincode = "2"
biscotti = "0.4.0"
bytes = "1.10.1"
camino = "1"
cargo_metadata = "0.21.0"
cargo-like-utils = "0.2"
cargo-manifest = "0.19.1"
clap = "4"
clap-stdin = "0.6.0"
config = "0.15.13"
console = "0.16.0"
convert_case = "0.8"
darling = "0.21"
xxhash-rust = "0.8.15"
elsa = "1.11.2"
fixedbitset = "0.5"
figment = "0.10"
form_urlencoded = "1.2"
fs-err = "3"
futures-util = "0.3"
globwalk = "0.9.1"
guppy = "0.17.20"
heck = "0.5.0"
hex = "0.4.3"
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = "1"
hyper-util = "0.1"
include_dir = "0.7.4"
indexmap = "2"
indicatif = "0.18.0"
insta = "1.43.1"
itertools = "0.14"
jiff = "0.2.15"
jiff-sqlx = "0.1.1"
jsonwebtoken = "9.3.1"
la-arena = "0.3"
libc = "0.2.174"
libtest-mimic = "0.8.1"
liquid = "0.26.11"
liquid-core = "0.26.11"
matchit = "0.8.6"
miette = "7.6.0"
mime = "0.3"
num_cpus = "1.17.0"
object-pool = "0.6"
once_cell = "1.21.3"
paste = "1"
path-absolutize = "3.1.1"
pem = "3.0.5"
percent-encoding = "2"
petgraph = { version = "0.8", default-features = false }
pin-project-lite = "0.2"
prettyplease = "0.2"
proc-macro2 = "1.0.95"
quote = "1.0.40"
r2d2 = "0.8"
r2d2_sqlite = "0.25.0"
rayon = "1.10"
redact = "0.1.11"
regex = "1.11.1"
relative-path = "2.0"
remove_dir_all = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7.0"
reqwest-tracing = "0.5.8"
ring = "0.17.14"
rlimit = "0.10.2"
ron = "0.10"
rustc-hash = "2"
rusqlite = "0.32"
rustdoc-types = { version = "0.54.0", features = ["rustc-hash"] }
sanitize-filename = "0.6"
self-replace = "1.5.0"
secrecy = "0.10.3"
semver = "1.0.26"
serde = "1.0.219"
serde_html_form = "0.2"
serde_json = "1.0.141"
serde_path_to_error = "0.1"
serde_stacker = "0.1"
sha2 = "0.10.9"
similar = "2.7.0"
smallvec = "1"
sqlx = { version = "0.8", default-features = false }
socket2 = "0.6.0"
static_assertions = "1.1.0"
supports-color = "3.0.2"
supports-hyperlinks = "3.1.0"
supports-unicode = "3.0.0"
syn = "2.0"
tar = "0.4.44"
tempfile = "3.20.0"
terminal_size = "0.4"
textwrap = "0.16.2"
thiserror = "2"
tokio = "1.46.1"
toml = "0.9.2"
toml_edit = "0.23.2"
tracing = { version = "0.1.41", default-features = false }
tracing-log = "0.2"
tracing_log_error = "0.1"
tracing-chrome = "0.7"
tracing-subscriber = "0.3"
trybuild = "1.0"
type-safe-id = "0.3"
ubyte = "0.10.4"
unicode-width = "0.2"
ureq = "3.0.12"
uuid = "1"
walkdir = "2.5.0"
windows-sys = "0.60.2"
xdg-home = "1.3.0"
# The `static` feature ensures that we won't accidentally link to the system
# version of the library, thus requiring the user to have the library preinstalled
# on their system at runtime.
xz2 = { version = "0.1", features = ["static"] }
zip = { version = "2", default-features = false }
owo-colors = "4.2.2"
async-trait = "0.1"
humantime-serde = "1"

# Config for 'cargo release'
[workspace.metadata.release]
shared-version = true
consolidate-commits = true
tag-name = "{{version}}"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
