[package]
name = "pavex_cli_diagnostic"
description = "An internal crate to build rich diagnostic messages for Pavex's CLIs."
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
miette = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
