[package]
name = "pavex_cli_shell"
description = "An internal crate to share a global shel instance between Pavex's CLIs and their library dependencies."
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
cargo-like-utils = { workspace = true }
anyhow = { workspace = true }
px_workspace_hack = { version = "0.1", path = "../../px_workspace_hack" }
