[package]
name = "pavex_rustdoc_ext"
description = "Extension traits for pavex_rustdoc_types"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
keywords = ["pavex"]

[dependencies]
rustdoc-types = { workspace = true }

px_workspace_hack = { version = "0.1", path = "../../px_workspace_hack" }
