[package]
name = "pavexc_annotations"
description = "Pavex annotation processing for the Pavex compiler"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
keywords = ["pavex"]

[lints]
clippy = { large_enum_variant = "allow", result_large_err = "allow" }

[dependencies]
# Core dependencies
rustdoc-types = { workspace = true }
pavex_rustdoc_ext = { path = "../pavex_rustdoc_ext", version = "=0.2.10" }
pavexc_attr_parser = { path = "../pavexc_attr_parser", version = "=0.2.10" }
pavex_bp_schema = { path = "../pavex_bp_schema", version = "=0.2.10" }

# Serialization
bincode = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }

px_workspace_hack = { version = "0.1", path = "../../px_workspace_hack" }
