[package]
name = "pavexc_rustdoc_cache"
description = "SQLite-based caching for rustdoc JSON documentation"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true

[lints]
clippy = { large_enum_variant = "allow", result_large_err = "allow" }

[dependencies]
# Core dependencies
rustdoc-types = { workspace = true }

# Package graph
guppy = { workspace = true }
camino = { workspace = true }

# SQLite cache
rusqlite = { workspace = true, features = ["bundled"] }
r2d2_sqlite = { workspace = true }
r2d2 = { workspace = true }

# Serialization
bincode = { workspace = true, features = ["serde"] }
rkyv = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["unbounded_depth"] }
serde_stacker = { workspace = true }

# Utilities
anyhow = { workspace = true }
fs-err = { workspace = true }
xxhash-rust = { workspace = true, features = ["xxh64"] }
globwalk = { workspace = true }
tracing = { workspace = true }
tracing_log_error = { workspace = true }
num_cpus = { workspace = true }
itertools = { workspace = true }
thiserror = { workspace = true }
rustc-hash = { workspace = true }
ahash = { workspace = true }
toml = { workspace = true }
once_cell = { workspace = true }

px_workspace_hack = { version = "0.1", path = "../../px_workspace_hack" }
