[package]
name = "application"
edition = "2021"
version = "0.1.0"
autobins = false
autoexamples = false
autotests = false
autobenches = false

[dependencies]
bytes = "1.4.0"
http = "0.2.9"
http-body = "0.4.5"
hyper = "0.14.25"
matchit = "0.7.0"

[dependencies.app_blueprint]
version = "0.1.0"
path = "../app_blueprint"
package = "app_blueprint"

[dependencies.pavex_runtime]
version = "0.1.0"
path = "../../libs/pavex_runtime"
package = "pavex_runtime"
