[workspace]
members = ["server", "server_sdk", "app"]
resolver = "2"

# By setting `server` as the default member, `cargo run` will default to running the server binary
# when executed from the root of the workspace.
# Otherwise, you would have to use `cargo run --bin api` to run the server binary.
default-members = ["server"]
