[package]
name = "generate_from_path"
version.workspace = true
edition.workspace = true
repository.workspace = true
description = "Generate a Rust project from a local Liquid template. A stripped-down version of cargo-generate."
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
toml = { workspace = true }
path-absolutize = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }
fs-err = { workspace = true }
liquid = { workspace = true }
liquid-core = { workspace = true }
heck = { workspace = true }
indicatif = { workspace = true }
walkdir = { workspace = true }
sanitize-filename = { workspace = true }
regex = { workspace = true }
px_workspace_hack = { version = "0.1", path = "../px_workspace_hack" }
